fixed spacing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,10 +4,12 @@ body {
 }
 
 
+
 /*INTRO*/
 
 h5 {
-  margin-top: 5%;
+  margin-top: 2%;
+  margin: 0%;
   padding-left: 5%;
   padding-bottom: 0px;
   font-family: unbounded light;
@@ -47,7 +49,7 @@ h3 {
     flex: 33%;
     height: auto;
     flex-direction: row;
-    padding-bottom: 10%;
+    padding-bottom: 2%;
     padding-top: 0%;
     margin-top: 0%;
     text-align: center;
@@ -115,7 +117,7 @@ h3 {
 
 .workDetails3 img {
   display: inline-block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -172,13 +174,13 @@ h3 {
 }
 
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 440px) {
       
   .flex-container {
       flex-direction: column;
       flex: 100%;
-      columns: 100% 1;
-      text-align: wrap;
+      /*columns: 100% 1;*/
+      /*text-align: wrap;*/
     }
   
     h3 {
@@ -200,6 +202,11 @@ h3 {
       gap: 5px;
       padding: 20px;
       margin: 30px;
+    }
+
+    .workDetails3 img {
+      min-width: 100%;
+      
     }
 
   }
